tests/machine/x/cobol/substring_builtin.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/substring_builtin.cob:6: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/substring_builtin.cob:7: error: 'SUBSTRING_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/substring_builtin.cob:6: error: 'SUBSTRING' is not defined

