tests/machine/x/cobol/substring_builtin.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. SUBSTRING_BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       PROCEDURE DIVISION.
       PERFORM SUBSTRING USING "mochi" 1 4
       DISPLAY SUBSTRING_RES
       STOP RUN.
